bin/nohup.out
  File "/opt/skynet/bin/skynetd.py", line 224
    double_streamer("HVAC_HystTemp","%.1f" % hyst_temp)
                  ^
SyntaxError: invalid syntax
  File "/opt/skynet/bin/skynetd.py", line 224
    double_streamer("HVAC_HystTemp","%.1f" % hyst_temp)
                  ^
SyntaxError: invalid syntax
  File "/opt/skynet/bin/skynetd.py", line 731
    text_file.write(str(HEAT_times[0]) + "\n)
                                            ^
SyntaxError: EOL while scanning string literal
  File "/opt/skynet/bin/skynetd.py", line 612
    if ((timeNow - HEAT_times[0]) > hyst_time) or ((timeNow - startTime) > 60 and (((timeNow - startTime) < hyst_time) and startupburn = False)) or (HVAC_status[2] == 1):
                                                                                                                                       ^
SyntaxError: invalid syntax
/opt/skynet/bin/skynetd.py:619: SyntaxWarning: name 'startupburn' is used prior to global declaration
  global startupburn
/opt/skynet/bin/skynetd.py:620: SyntaxWarning: name 'startupburn' is used prior to global declaration
  global startupburn
  File "/opt/skynet/bin/skynetd.py", line 255
    double_streamer("secondsSinceStartup",seconds_since_startup)
                  ^
SyntaxError: invalid syntax
/opt/skynet/bin/skynetd.py:622: SyntaxWarning: name 'startupBurn' is used prior to global declaration
  global startupBurn
/opt/skynet/bin/skynetd.py:622: SyntaxWarning: name 'startupBurn' is used prior to global declaration
  global startupBurn
/opt/skynet/bin/skynetd.py:627: SyntaxWarning: name 'startupBurn' is used prior to global declaration
  global startupBurn
/opt/skynet/bin/skynetd.py:632: SyntaxWarning: name 'startupBurn' is used prior to global declaration
  global startupBurn
/opt/skynet/bin/skynetd.py:632: SyntaxWarning: name 'startupBurn' is used prior to global declaration
  global startupBurn
/opt/skynet/bin/skynetd.py:632: SyntaxWarning: name 'startupBurn' is used prior to global declaration
  global startupBurn
/opt/skynet/bin/skynetd.py:629: SyntaxWarning: name 'startupBurn' is used prior to global declaration
  global startupBurn
/opt/skynet/bin/skynetd.py:629: SyntaxWarning: name 'startupBurn' is used prior to global declaration
  global startupBurn
/opt/skynet/bin/skynetd.py:630: SyntaxWarning: name 'startupBurn' is used prior to global declaration
  global startupBurn
/opt/skynet/bin/skynetd.py:642: SyntaxWarning: name 'startupBurn' is used prior to global declaration
  global startupBurn
/opt/skynet/bin/skynetd.py:601: SyntaxWarning: name 'startupBurn' is used prior to global declaration
  global startupBurn
/opt/skynet/bin/skynetd.py:600: SyntaxWarning: name 'startupBurn' is used prior to global declaration
  global startupBurn
/opt/skynet/bin/skynetd.py:600: SyntaxWarning: name 'startupBurn' is used prior to global declaration
  global startupBurn
